feat:update profile

--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: page
 title: "About"
 description: "Hey, this is uncle's blog."
-header-img: "img/tag-bg-o.jpg"
+header-img: "img/about.jpg"
 ---
 
 <!-- Chinese Version -->
@@ -12,7 +12,6 @@ header-img: "img/tag-bg-o.jpg"
     <blockquote><p>纸上得来终觉浅，绝知此事要躬行。</p></blockquote>
 
     <p>Hey，我是<strong>UncleDrewZhu</strong>，从事后端开发，现在苏州工作。</p>
-
 
     <p>喜欢看球，最爱AC米兰。</p>
 
