--- a/tags.html
+++ b/tags.html
@@ -2,7 +2,7 @@
 title: Tags
 layout: default
 description: tagging for quick searching
-header-img: "img/post-bg-os-metro.jpg"
+header-img: "img/tags.jpg"
 ---
 
 <!-- Page Header -->
