feat:update profile

--- a/tags.html
+++ b/tags.html
@@ -1,7 +1,7 @@
 ---
 title: Tags
 layout: default
-description: tagging for quick searching
+description: Tagging for quick searching.
 header-img: "img/tags.jpg"
 ---
 
