feat:update profile

--- a/about.html
+++ b/about.html
@@ -13,6 +13,10 @@ header-img: "img/about.jpg"
 
     <p>Hey，我是<strong>UncleDrewZhu</strong>，从事后端开发，现在苏州工作。</p>
 
+    <p>搭建个人博客，一方面是与大家分享工作学习上的经验，一方面也是对自己的反省与检讨。</p>
+
+    <p>逼自己写点东西，俗话说，好记性不如烂笔头，这也是对自己的负责。</p>
+
     <p>喜欢看球，最爱AC米兰。</p>
 
     <p></p>
