--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "About"
-description: "Hey, this is uncle's blog."
+description: "Hey, this is UncleDrew's blog."
 header-img: "img/about.jpg"
 ---
 
@@ -11,11 +11,11 @@ header-img: "img/about.jpg"
     <!--copied from markdown -->
     <blockquote><p>纸上得来终觉浅，绝知此事要躬行。</p></blockquote>
 
-    <p>Hey，我是<strong>UncleDrewZhu</strong>，从事后端开发，现在苏州工作。</p>
+    <p>Hey，我是<strong>UncleDrew</strong>，从事后端开发，现在苏州工作。</p>
 
     <p>搭建个人博客，一方面是与大家分享工作学习上的经验，一方面也是对自己的反省与检讨。</p>
 
-    <p>逼自己写点东西，俗话说，好记性不如烂笔头，这也是对自己的负责。</p>
+    <p></p>
 
     <p>喜欢看球，最爱AC米兰。</p>
 
