feat:update user name

--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: "About"
-description: "Hey, this is UncleDrew's blog."
+title: About
+description: Hey, this is UncleDrew's blog.
 header-img: "img/about.jpg"
 ---
 
