feat:update index.html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "Practice makes perfect."
+description: "生活不是要你站在边线围观，这个世界需要你参与进来。"
 ---
 
 {% for post in paginator.posts %}
