--- a/tags.html
+++ b/tags.html
@@ -20,7 +20,7 @@ header-img: "img/tags.jpg"
 </header>
 
 <!-- Main Content -->
-<div class="zh post-container">
+<div class="container">
 	<div class="row">
 		<div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
             <!-- 标签云 -->
